docs/pages/versions/v57.0.0/sdk/ui/universal/collapsible.mdx
---
title: Collapsible
description: A labelled tappable header that toggles visibility of its content.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';

`Collapsible` is a primitive that shows or hides its content with a tap on a labelled header. Controlled via [`isOpen`](#isopen) and [`onOpenChange`](#onopenchange) — each `Collapsible` manages independent state.

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/collapsible/android-light.webp',
    darkSrc: '/static/images/expo-ui/collapsible/android-dark.webp',
    alt: 'An expanded About section with a chevron and description text',
  }}
  ios={{
    src: '/static/images/expo-ui/collapsible/ios-light.webp',
    darkSrc: '/static/images/expo-ui/collapsible/ios-dark.webp',
    alt: 'An expanded About section with a chevron and description text',
  }}
/>

## Installation

<APIInstallSection />

## Usage

### Basic collapsible

<ComponentExample
  title="CollapsibleExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-collapsible-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-collapsible-basic-android-dark.webp',
    alt: 'A collapsed About row with a chevron',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-collapsible-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-collapsible-basic-ios-dark.webp',
    alt: 'A collapsed About row with a chevron',
  }}>

```tsx
import { useState } from 'react';
import { useColorScheme } from 'react-native';
import { Host, Column, Collapsible, Text } from '@expo/ui';

export default function CollapsibleExample() {
  const [open, setOpen] = useState(false);
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };

  return (
    <Host matchContents={{ vertical: true }} style={{ width: '100%' }}>
      <Column spacing={8} style={{ padding: 16 }}>
        <Collapsible isOpen={open} onOpenChange={setOpen} label="About">
          <Text textStyle={ink}>
            A primitive that toggles visibility of its content via a labelled tappable header.
          </Text>
        </Collapsible>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

### Accordion (one section open at a time)

Wire each `Collapsible`'s `isOpen` to a shared parent value. The component doesn't enforce exclusivity — composition is up to the consumer.

<ComponentExample
  title="CollapsibleAccordionExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-collapsible-accordion-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-collapsible-accordion-android-dark.webp',
    alt: 'Three sections with the first expanded to show its content',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-collapsible-accordion-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-collapsible-accordion-ios-dark.webp',
    alt: 'Three sections with the first expanded to show its content',
  }}>

```tsx
import { useState } from 'react';
import { useColorScheme } from 'react-native';
import { Host, Column, Collapsible, Text } from '@expo/ui';

type Section = 'a' | 'b' | 'c' | null;

export default function CollapsibleAccordionExample() {
  const [openSection, setOpenSection] = useState<Section>('a');
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };

  return (
    <Host matchContents={{ vertical: true }} style={{ width: '100%' }}>
      <Column spacing={8} style={{ padding: 16 }}>
        <Collapsible
          isOpen={openSection === 'a'}
          onOpenChange={open => setOpenSection(open ? 'a' : null)}
          label="Section A">
          <Text textStyle={ink}>Opening B or C closes this one.</Text>
        </Collapsible>
        <Collapsible
          isOpen={openSection === 'b'}
          onOpenChange={open => setOpenSection(open ? 'b' : null)}
          label="Section B">
          <Text textStyle={ink}>Opening A or C closes this one.</Text>
        </Collapsible>
        <Collapsible
          isOpen={openSection === 'c'}
          onOpenChange={open => setOpenSection(open ? 'c' : null)}
          label="Section C">
          <Text textStyle={ink}>Opening A or B closes this one.</Text>
        </Collapsible>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Collapsible } from '@expo/ui';
```

<APISection packageName="expo-ui/universal/collapsible" apiName="Collapsible" />

</PlatformTabsGroup>
